--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -4,6 +4,10 @@
     z-index: 1;
     padding-top: 196px;
     margin-bottom: 150px;
+    @media(max-width: 991px){
+        padding-top: 100px;
+        margin-bottom: 80px;
+    }
     &::before{
         position: absolute;
         left: 0;
@@ -13,6 +17,9 @@
         z-index: -1;
         background-color: #f5f6f8;
         content: "";
+        @media(max-width: 575px){
+            height: 548px;
+        }
     }
     .about-top-section-inner{
         .about-top-inner-wrapper{
@@ -23,8 +30,16 @@
                 gap: 50px;
                 align-items: flex-end;
                 margin-bottom: 80px;
+                @media(max-width: 991px){
+                    flex-direction: column;
+                    gap: 20px;
+                    margin-bottom: 50px;
+                }
                 .left-section{
                     width: 737px;
+                    @media(max-width: 1399px){
+                        width: 100%;
+                    }
                     h2{
                         margin-bottom: 0;
                         color: $black;
@@ -32,37 +47,65 @@
                         font-style: normal;
                         font-weight: 700;
                         line-height: 62px;
+                        @media(max-width: 1350px){
+                            font-size: 42px;
+                            line-height: 52px;
+                        }
+                        @media(max-width: 1199px){
+                            font-size: 32px;
+                            line-height: 42px;
+                        }
+                        @media(max-width: 374px){
+                            font-size: 29px;
+                        }
                     }
                 }
                 .right-section{
                     // width: 495px;
                     width: 540px;
+                    @media(max-width: 1399px){
+                        width: 100%;
+                    }
                     p{
                         margin-bottom: 0;
                         color: rgba(0,0,0,0.80);
                         font-style: normal;
                         font-weight: 400;
                         line-height: 26px;
-                        font-size: 18px;
+                        @media(min-width: 1920px){
+                            font-size: 18px;
+                        } 
+                        @media(max-width: 991px){
+                            line-height: 28px;
+                        }  
                     }
                 }
             }
             .bottom-image-section{
                 .image-wrapper{
-                    margin-bottom: 50px;
+                    // margin-bottom: 50px;
                     border-radius: 18px;
                     border: 2px solid $white;
                     overflow: hidden;
                     // height: 518px;
+                    @media(max-width: 991px){
+                        border-radius: 12px;
+                    }
                     img{
                         width: 100%;
                         object-fit: cover;
                         // object-position: bottom;
                         height: 518px;
+                        @media(max-width: 575px){
+                            // height: 242px;
+                            height: unset;
+                            object-position: bottom;
+                        }
                     }
                 }
             }
             .bottom-video-section{
+                display: none;
                 .video-wrapper{
                     height: 518px;
                     overflow: hidden;
@@ -85,13 +128,22 @@
 // Greeting Section 
 .greeting-section-wrapper{
     padding-bottom: 84px;
+    @media(max-width: 991px){
+        padding-bottom: 80px;
+    }
     .greeting-section-inner{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         gap: 20px;
+        @media(max-width: 991px){
+            flex-direction: column;
+        }
         .left-section{
             width: 630px;
+            @media(max-width: 1399px){
+                width: 100%;
+            }
             h2{
                 color: $black;
                 font-size: 46px;
@@ -99,8 +151,27 @@
                 font-weight: 700;
                 line-height: 56px;
                 margin-bottom: 43px;
+                @media(max-width: 1350px){
+                    font-size: 42px;
+                    line-height: 52px;
+                }
+                @media(max-width: 1199px){
+                    font-size: 32px;
+                    line-height: 42px;
+                }
+                @media(max-width: 991px){
+                    font-size: 28px;
+                    line-height: 38px;
+                    margin-bottom: 0;
+                }
+                @media(max-width: 374px){
+                    font-size: 26px;
+                }
             }
             .image-wrapper{
+                @media(max-width: 991px){
+                    display: none;
+                }
                 img{
                     width: 100%;
                     max-width: 124.875px;
@@ -109,6 +180,9 @@
         }
         .right-section{
             width: 630px;
+            @media(max-width: 1399px){
+                width: 100%;
+            }
             h4{
                 color: $black;
                 font-size: 28px;
@@ -116,16 +190,37 @@
                 font-weight: 600;
                 line-height: 38px;
                 margin-bottom: 20px;
+                br{
+                    display: none;
+                    @media(max-width: 991px){
+                        display: block;
+                    }
+                }
+                @media(max-width: 991px){
+                    font-size: 20px;
+                    line-height: 30px;
+                }
             }
             p{
                 color: rgba(0,0,0,0.80);
                 font-style: normal;
                 font-weight: 400;
                 line-height: 26px;
-                font-size: 18px;
+                @media(min-width: 1920px){
+                    font-size: 18px;
+                }
                 &:last-child{
                     font-weight: 600;
                     margin-bottom: 0;
+                    br{
+                        display: none;
+                        @media(max-width: 991px){
+                            display: block;
+                        }
+                    }
+                    @media(max-width: 991px){
+                        font-weight: 500;
+                    }
                 }
             }
         }
@@ -139,6 +234,9 @@
     padding: 100px 0;
     position: relative;
     z-index: 1;
+    @media(max-width: 991px){
+        padding: 80px 0;
+    }
     &::after{
         position: absolute;
         right: 0;
@@ -147,6 +245,9 @@
         background-color: #94f717;
         width: 58px;
         height: 58px;
+        @media(max-width: 991px){
+            display: none;
+        }
     }
     &::before{
         position: absolute;
@@ -156,6 +257,9 @@
         background-color: #C4E50F;
         width: 43px;
         height: 43px;
+        @media(max-width: 991px){
+            display: none;
+        }
     }
     .latest-news-inner{
         .top-title-link{
@@ -172,9 +276,24 @@
                     font-weight: 700;
                     line-height: 56px;
                     margin-bottom: 0;
+                    @media(max-width: 1350px){
+                        font-size: 42px;
+                        line-height: 52px;
+                    }
+                    @media(max-width: 1199px){
+                        font-size: 32px;
+                        line-height: 42px;
+                    }
+                    @media(max-width: 991px){
+                        font-size: 28px;
+                        line-height: 38px;
+                    }
                 }
             }
             .right-link{
+                @media(max-width: 991px){
+                    display: none;
+                }
                 a {
                     display: flex;
                     justify-content: center;
@@ -242,6 +361,10 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 20px;
+            @media(max-width: 991px){
+                grid-template-columns: repeat(1, 1fr);
+                gap: 50px;
+            }
             .news-box{
                 .image-wrapper{
                     border-radius: 12px;
@@ -258,17 +381,27 @@
                         font-size: 24px;
                         font-weight: 500;
                         line-height: 34px;
+                        @media(max-width: 991px){
+                            font-size: 20px;
+                            line-height: 30px;
+                        }
+
                     }
                 }
                 .content{
                     margin-bottom: 30px;
+                    @media(max-width: 991px){
+                        margin-bottom: 20px;
+                    }
                     p{
                         margin-bottom: 0;
                         color: rgba(0,0,0,0.80);
                         font-style: normal;
                         font-weight: 400;
                         line-height: 26px;
-                        font-size: 18px;
+                        @media(min-width: 1920px){
+                            font-size: 18px;
+                        }
                     }
                 }
                 .link-wrapper{
@@ -285,6 +418,10 @@
                         line-height: 30px;
                         transition: 0.1s ease-in-out;
                         // text-decoration: underline;
+
+                        @media(max-width: 991px){
+                            font-size: 16px;
+                        }
                         .underline{
                             text-decoration: underline;
                         }
@@ -304,6 +441,74 @@
                     }
                 }
             }
+        }
+        .bottom-mobile-link{
+            margin-top: 30px;
+            display: none;
+            @media(max-width: 991px){
+                display: block;
+            }
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                text-align: center;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 26px;
+                border-radius: 8px;
+                text-decoration: none;
+                transition: 0.3s ease-in-out;
+    
+                span {
+                  transition: 0.3s ease-in-out;
+                }
+    
+                &:first-child {
+                  color: $white;
+                  background-color: $theme-color;
+                  padding: 14px 29px 14px 30px;
+                  border: 1px solid $theme-color;
+    
+                  @media(max-width: 1350px) {
+                    padding: 14px 20px;
+                  }
+    
+                  @media(max-width: 991px) {
+                    padding: 10px 30px;
+                  }
+    
+                  &:hover {
+                    background-color: transparent;
+                    color: $theme-color;
+    
+                    span {
+                      transform: translateX(12px);
+                    }
+                  }
+                }
+    
+                &:last-child {
+                  border: 1px solid $theme-color;
+                  color: $white;
+                  padding: 14px 29px 14px 30px;
+    
+                  @media(max-width: 1350px) {
+                    padding: 14px 20px;
+                  }
+    
+                  @media(max-width: 991px) {
+                    padding: 10px 30px;
+                  }
+    
+                  &:hover {
+                    background-color: $white;
+                    border-color: $theme-color;
+                    color: $theme-color;
+                  }
+                }
+              }
         }
     }
 }
