--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -206,9 +206,10 @@ header {
               // Style 
             }
           }
-          .active{
-            a{
-              &::before{
+
+          .active {
+            a {
+              &::before {
                 width: 100%;
               }
             }
@@ -543,6 +544,7 @@ header {
                       color: $black;
                     }
                   }
+
                   // Dropdown Mobile Menu 
                   h2 {
                     &:focus {
@@ -551,7 +553,7 @@ header {
                       outline: none;
                     }
                   }
-    
+
                   button {
                     color: rgba(0, 0, 0, 0.80);
                     font-weight: 500;
@@ -560,21 +562,21 @@ header {
                     font-size: 16px;
                     // border-bottom: 1px solid rgba(0, 0, 0, 0.1);
                     border-radius: 0;
-    
+
                     position: relative;
                     transition: 0.3s ease-in-out;
-    
+
                     &:hover {}
-    
+
                     &:focus {
                       border: none;
                       box-shadow: none;
                       outline: none;
                     }
                   }
-    
+
                   .active {}
-    
+
                   .accordion-body {
                     margin-top: 15px;
                     padding: 0;
@@ -582,13 +584,16 @@ header {
                     background-color: $white;
                     border-radius: 8px;
                     box-shadow: 15px 15px 60px 0px rgba(133, 133, 133, 0.10);
-                    ul{
-                      li{
+
+                    ul {
+                      li {
                         border-bottom: 1px solid #ddd;
                         margin-bottom: 0;
-                        &:last-child{
+
+                        &:last-child {
                           border-bottom: 0px solid transparent;
                         }
+
                         a {
                           width: 100%;
                           padding: 12px;
@@ -599,11 +604,11 @@ header {
                           color: $black;
                           font-weight: 400;
                           line-height: 26px;
-      
+
                           &::before {
                             display: none;
                           }
-      
+
                           .image-box {
                             padding: 9px;
                             width: 36px;
@@ -615,23 +620,25 @@ header {
                             border: 1px solid #ddd;
                             background-color: $white;
                             transition: 0.3s ease-in-out;
-      
+
                             img {
                               width: 18px;
                             }
                           }
-      
+
                           &:hover {
                             text-decoration: underline;
                             font-weight: 500;
-      
+
                             .image-box {
                               background-color: #f5f6f8;
                             }
                           }
-                          &:focus{
+
+                          &:focus {
                             text-decoration: underline;
-                            .image-box{
+
+                            .image-box {
                               background-color: #f5f6f8;
                             }
                           }
@@ -640,7 +647,7 @@ header {
                     }
 
                   }
-    
+
                   .accordion-button::after {
                     font-size: 24px;
                     background-image: unset;
@@ -653,24 +660,24 @@ header {
                     font-family: "Material Icons";
                     color: rgba(0, 0, 0, 0.80);
                   }
-    
+
                   .accordion-button:not(.collapsed) {
                     box-shadow: none;
                     color: rgba(0, 0, 0, 0.8);
-                    
+
                   }
-    
+
                   .accordion-button:not(.collapsed)::after {
                     content: "\e316";
                   }
-    
+
                   .accordion {
                     background-color: transparent;
-    
+
                     .accordion-item {
                       background-color: transparent;
                       border: none;
-    
+
                       .accordion-header {
                         &:focus {
                           border: none;
@@ -680,10 +687,12 @@ header {
                       }
                     }
                   }
+
                   // Dropdown Mobile Menu 
                 }
-                .active{
-                  a{
+
+                .active {
+                  a {
                     text-decoration: underline;
                   }
                 }
@@ -2174,6 +2183,15 @@ header {
               margin-left: auto;
               margin-right: auto;
 
+              // Animation 
+              // -webkit-animation-name: backgroundColorAnimation;
+              // animation-name: backgroundColorAnimation;
+              // animation-fill-mode: both;
+              // animation-iteration-count: infinite;
+              // animation-duration: 0.5s;
+              // animation-delay: 3s;
+              // Animation 
+
               @media(max-width: 1350px) {
                 max-width: 130px;
                 padding: 8px 36.958px 8px 8.67px;
@@ -2228,6 +2246,19 @@ header {
                 }
               }
             }
+
+            // Animation 
+            // @keyframes backgroundColorAnimation {
+            //   0% {
+            //     background: #fff;
+            //   }
+
+            //   100% {
+            //     background: #23282F;
+            //   }
+            // }
+
+            // Animation 
 
             .btn-bg {
               background: #23282F;
