addes sign in and sign up pages

--- a/css/style.css
+++ b/css/style.css
@@ -4252,4 +4252,229 @@ header .scrolled {
   color: #4182FF;
 }
 
+@media (max-width: 1024px) {
+  .sign-in-up-wrapper .container-fluid {
+    padding: 0;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+@media (max-width: 1440px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 1024px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section {
+  width: 49.3%;
+  padding: 45px 94px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media (max-width: 1440px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section {
+    width: 100%;
+  }
+}
+@media (max-width: 1199px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section {
+    padding: 30px 50px 30px 30px;
+  }
+}
+@media (max-width: 1024px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section {
+    padding: 30px 20px;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section {
+  margin-bottom: 40px;
+}
+@media (max-width: 1199px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section {
+    margin-bottom: 30px;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section a {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28.089px;
+  text-decoration: none;
+  color: black;
+  justify-content: center;
+}
+@media (max-width: 991px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section a {
+    line-height: 19.807px;
+  }
+}
+@media (max-width: 575px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section a {
+    font-size: 18px;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section a img {
+  margin-right: 10px;
+  max-width: 25px;
+}
+@media (max-width: 991px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .top-logo-section a img {
+    max-width: 17.629px;
+    margin-right: 7.05px;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper {
+  padding: 40px 30px;
+  border-radius: 12px;
+  border: 1px solid #ddd;
+}
+@media (max-width: 1024px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper {
+    padding: 20px;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group {
+  margin-bottom: 15px;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group:last-child {
+  margin-bottom: 0;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-floating input {
+  color: black;
+  font-weight: 400;
+  line-height: 24px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  background-color: white;
+  transition: 0.3s ease-in-out;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-floating input:focus {
+  border-color: #4182FF;
+  background-color: #f5f6f8;
+  box-shadow: none;
+  outline: none;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-floating label {
+  color: rgba(0, 0, 0, 0.6);
+  font-weight: 400;
+  font-style: normal;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-check {
+  margin: 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-check input {
+  width: 20px;
+  height: 20px;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-check input:focus {
+  box-shadow: none;
+  outline: none;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-check label {
+  user-select: none;
+  font-size: 14px;
+  color: rgba(15, 25, 46, 0.8);
+  font-weight: 400;
+  line-height: 22px;
+  margin-left: 11px;
+}
+@media (max-width: 1440px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .form-check label br {
+    display: none;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .btn_submit {
+  width: 100%;
+  text-align: center;
+  padding: 15px 30px;
+  border-radius: 8px;
+  font-weight: 500;
+  line-height: 26px;
+  color: white;
+  background: #4182FF;
+  border: 1px solid #4182FF;
+  transition: 0.3s ease-in-out;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .form-group .btn_submit:hover {
+  background-color: transparent;
+  color: #4182FF;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .row-inner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+}
+@media (max-width: 1024px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .row-inner {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .form-section-wrapper .form-section-inner form .row-inner .col-inner .form-group {
+  margin-bottom: 15px;
+}
+@media (max-width: 1199px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .bottom-section-wrapper {
+    margin-top: 32px;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .bottom-section-wrapper .inner-wrapper p {
+  text-align: center;
+  margin-bottom: 0;
+  color: rgba(15, 25, 46, 0.8);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .bottom-section-wrapper .inner-wrapper p a {
+  text-decoration: underline;
+  font-weight: 600;
+  color: rgba(15, 25, 46, 0.8);
+  transition: 0.3s ease-in-out;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .left-form-section .bottom-section-wrapper .inner-wrapper p a:hover {
+  text-decoration: none;
+  color: #4182FF;
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .right-image-section {
+  width: 50.7%;
+}
+@media (max-width: 1440px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .right-image-section {
+    width: 100%;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .right-image-section .image-wrapper img {
+  width: 100%;
+}
+@media (max-width: 575px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .right-image-section .image-wrapper .desktop-image {
+    display: none;
+  }
+}
+.sign-in-up-wrapper .container-fluid .inner-section-wrapper .right-image-section .image-wrapper .mobile-image {
+  display: none;
+}
+@media (max-width: 575px) {
+  .sign-in-up-wrapper .container-fluid .inner-section-wrapper .right-image-section .image-wrapper .mobile-image {
+    display: block;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
