--- a/sass/pages/_signup.scss
+++ b/sass/pages/_signup.scss
@@ -183,6 +183,9 @@
                             font-style: normal;
                             font-weight: 400;
                             line-height: 22px;
+                            @media(min-width: 1366px){
+                                font-size: 18px;
+                            }
                             a{
                                 text-decoration: underline;
                                 font-weight: 600;
@@ -206,6 +209,12 @@
                 .image-wrapper{
                     img{
                         width: 100%;
+                        height: 100vh;
+                        object-fit: cover;
+                        @media(max-width: 1024px){
+                            object-fit: unset;
+                            height: unset;
+                        }
                     }
                     .desktop-image{
                         @media(max-width: 575px){
