--- a/sass/pages/_dispute.scss
+++ b/sass/pages/_dispute.scss
@@ -49,6 +49,9 @@
                 font-weight: 400;
                 line-height: 26px;
                 margin-bottom: 0;
+                @media(min-width: 1920px) {
+                    font-size: 18px;
+                  }
             }
         }
 
