--- a/css/style.css
+++ b/css/style.css
@@ -4495,6 +4495,11 @@ header .scrolled {
   background-color: #f5f6f8;
   padding-top: 81px;
 }
+@media (max-width: 991px) {
+  .dispute-resolution-top-section-wrapper {
+    padding-top: 100px;
+  }
+}
 .dispute-resolution-top-section-wrapper::after {
   position: absolute;
   right: 0;
@@ -4503,6 +4508,12 @@ header .scrolled {
   background-color: #94f717;
   width: 80px;
   height: 80px;
+}
+@media (max-width: 1199px) {
+  .dispute-resolution-top-section-wrapper::after {
+    width: 47px;
+    height: 47px;
+  }
 }
 .dispute-resolution-top-section-wrapper::before {
   position: absolute;
@@ -4513,11 +4524,26 @@ header .scrolled {
   width: 43px;
   height: 43px;
 }
+@media (max-width: 1199px) {
+  .dispute-resolution-top-section-wrapper::before {
+    right: 47px;
+    bottom: 47px;
+    width: 25px;
+    height: 25px;
+  }
+}
 .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner {
   display: flex;
   flex-direction: row;
   gap: 108px;
   align-items: center;
+}
+@media (max-width: 991px) {
+  .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner {
+    flex-direction: column;
+    align-items: unset;
+    gap: 22px;
+  }
 }
 .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section h2 {
   color: black;
@@ -4527,12 +4553,39 @@ header .scrolled {
   font-style: normal;
   margin-bottom: 20px;
 }
+@media (max-width: 1199px) {
+  .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section h2 {
+    font-size: 32px;
+    line-height: 42px;
+  }
+}
+.dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section h2 br {
+  display: none;
+}
+@media (max-width: 991px) {
+  .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section h2 br {
+    display: block;
+  }
+}
 .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section p {
   color: rgba(0, 0, 0, 0.8);
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
   margin-bottom: 0;
+}
+@media (max-width: 991px) {
+  .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section p {
+    line-height: 28px;
+  }
+}
+.dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section p br {
+  display: none;
+}
+@media (max-width: 991px) {
+  .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section p br {
+    display: block;
+  }
 }
 @media (min-width: 1920px) {
   .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .left-content-section p {
@@ -4543,10 +4596,26 @@ header .scrolled {
   width: 100%;
   max-width: 376px;
 }
+@media (max-width: 991px) {
+  .dispute-resolution-top-section-wrapper .dispute-resolution-top-inner .right-image-section .image-wrapper img {
+    max-width: 292px;
+  }
+}
 
 .dispute-request-section-wrapper {
   padding-top: 100px;
   padding-bottom: 150px;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper {
+    padding-top: 80px;
+    padding-bottom: 100px;
+  }
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .container-fluid {
+    padding: 0;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner {
   display: flex;
@@ -4554,17 +4623,38 @@ header .scrolled {
   justify-content: space-between;
   gap: 50px;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner {
+    flex-direction: column-reverse;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section {
   width: 100%;
   max-width: 708px;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section {
+    max-width: 100%;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper {
   border-radius: 12px;
   border: 1px solid #e3e3e3;
   background-color: white;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper {
+    border-radius: 0;
+    border: none;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .title-wrapper {
   padding: 30px 20px;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .title-wrapper {
+    padding: 30px 20px;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .title-wrapper h3 {
   margin-bottom: 0;
@@ -4574,10 +4664,21 @@ header .scrolled {
   font-weight: 500;
   line-height: 38px;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .title-wrapper h3 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .nav {
   gap: 6px;
   padding: 0 20px;
   margin-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .nav {
+    margin-bottom: 24px;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .nav .nav-item button {
   background-color: white;
@@ -4619,6 +4720,11 @@ header .scrolled {
   border: 1px solid #e3e3e3;
   border-left-width: 0px;
   border-right-width: 0px;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .request-tabs-content .dispute-top-title {
+    padding: 12px 20px;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .request-tabs-content .dispute-top-title h5 {
   margin-bottom: 0;
@@ -4802,6 +4908,13 @@ header .scrolled {
   line-height: 26px;
   transition: 0.3s ease-in-out;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .request-tabs-content .requests-wrapper .replies-wrapper .replies-inner .collapse .card.card-body .content-wrapper .help-text a,
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .request-tabs-content .requests-wrapper .replies-wrapper .replies-inner .collapsing .card.card-body .content-wrapper .help-text a {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .request-tabs-content .requests-wrapper .replies-wrapper .replies-inner .collapse .card.card-body .content-wrapper .help-text a:hover,
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .request-tabs-content .requests-wrapper .replies-wrapper .replies-inner .collapsing .card.card-body .content-wrapper .help-text a:hover {
   color: #4182FF;
@@ -4847,6 +4960,11 @@ header .scrolled {
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .pagination-wrapper {
   padding: 30px 20px;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .pagination-wrapper {
+    border-bottom: 1px solid #e3e3e3;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .pagination-wrapper ul {
   margin: 0;
   padding: 0;
@@ -4890,6 +5008,11 @@ header .scrolled {
 .dispute-request-section-wrapper .dispute-request-section-inner .left-request-section .inner-wrapper .dispute-request-tabs-wrapper .tab-content .pagination-wrapper ul .active a {
   color: white;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section {
+    padding: 0 20px;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper {
   padding: 30px;
   max-width: 522px;
@@ -4897,6 +5020,13 @@ header .scrolled {
   border-radius: 12px;
   border: 1px solid #ddd;
   background-color: white;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper {
+    max-width: 100%;
+    min-width: 100%;
+    padding: 20px;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .form-title {
   margin-bottom: 16px;
@@ -4909,6 +5039,12 @@ header .scrolled {
   font-weight: 500;
   line-height: 38px;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .form-title h2 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .form-content-para {
   margin-bottom: 16px;
 }
@@ -4919,11 +5055,22 @@ header .scrolled {
   font-weight: 400;
   line-height: 26px;
 }
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .form-content-para p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .request-form form .form-group {
   margin-bottom: 15px;
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .request-form form .form-group:last-child {
   margin-bottom: 0;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .request-form form .form-group:last-child {
+    padding-top: 15px;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .request-form form .form-group .form-floating input {
   color: black;
@@ -4988,6 +5135,11 @@ header .scrolled {
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+@media (max-width: 991px) {
+  .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .request-form form .form-group .btn_submit {
+    padding: 10px 30px;
+  }
 }
 .dispute-request-section-wrapper .dispute-request-section-inner .right-request-section .inner-wrapper .request-form form .form-group .btn_submit span {
   transition: 0.3s ease-in-out;
